@@ -12,6 +12,10 @@ Summary of important user-visible changes for statistics 1.2.0:
  ** `kmeans' has been fixed to deal with clusters that contain only
     one element.
 
+ ** `normplot' has been fixed to avoid use of functions that are have been
+    removed from Octave core. Also, the plot produced should now display some
+    aesthetic elements and appropriate legends.
+
 Summary of important user-visible changes for statistics 1.1.3:
 -------------------------------------------------------------------
 
